keyboard handling in modal forms

--- a/lexiflux/templates/partials/font_settings_modal.html
+++ b/lexiflux/templates/partials/font_settings_modal.html
@@ -1,4 +1,11 @@
-<div id="fontSettingsModal" class="modal fade" aria-hidden="true" aria-labelledby="fontSettingsModalLabel" role="dialog">
+<div id="fontSettingsModal"
+     class="modal fade"
+     tabindex="-1"
+     aria-hidden="true"
+     aria-labelledby="fontSettingsModalLabel"
+     role="dialog"
+     data-bs-focus="true"
+     data-bs-keyboard="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -26,7 +33,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" id="fontSettingsSubmit" class="btn btn-primary">Apply</button>
+                <button type="button" id="fontSettingsSubmit" class="btn btn-primary" data-bs-dismiss="modal" >Apply</button>
             </div>
         </div>
     </div>
