--- a/lexiflux/templates/language-preferences.html
+++ b/lexiflux/templates/language-preferences.html
@@ -6,7 +6,7 @@
         <div class="container-fluid">
             {% include 'hamburger.html' with current_page='language-preferences' %}
             <div class="mx-3 text-truncate container-fluid">
-                Language Preferences
+                Dictionary & AI Insights Settings
             </div>
         </div>
     </nav>
@@ -17,7 +17,7 @@
             <div class="col-md-12">
                 <div class="card language-selection-card">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Editing preferences for:</h5>
+                        <h5 class="card-title mb-0">Configure settings for:</h5>
                     </div>
                     <div class="card-body">
                         <div class="language-select-wrapper mb-3">
