--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -77,7 +77,7 @@
                 <button id="lexical-panel-button" class="nav-item btn btn-primary ms-2" type="button"
                         data-bs-toggle="collapse" data-bs-target="#lexical-panel"
                         aria-expanded="false" aria-controls="lexical-panel"
-                        title="Lexical Sidebar">
+                        title="AI Insights Sidebar">
                   <i id="lexical-panel-icon" class="bi bi-chevron-double-left"></i>
                 </button>
             </div>
