--- a/lexiflux/templates/language-preferences.html
+++ b/lexiflux/templates/language-preferences.html
@@ -145,6 +145,7 @@
 
     {% include 'partials/lexical_artical_modal.html' %}
     {% include 'partials/confirm_global_language_preferences_modal.html' %}
+    {% include 'partials/about_modal.html' %}
 
     <!-- Delete Confirmation Modal -->
     <div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-labelledby="deleteConfirmModalLabel" aria-hidden="true" ref="deleteConfirmModal">
