--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -196,6 +196,7 @@
     {% include 'partials/goto_modal.html' %}
     {% include 'partials/search_modal.html' %}
     {% include 'partials/font_settings_modal.html' %}
+    {% include 'partials/about_modal.html' %}
 
     <script src="{% static 'lexiflux/bundle.js' %}"></script>
 {% endblock %}
