--- a/lexiflux/templates/words-export.html
+++ b/lexiflux/templates/words-export.html
@@ -113,4 +113,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script>  {% include 'words-export-vue.js' %} </script>
+
+{% include 'partials/about_modal.html' %}
 {% endblock %}
