--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -86,10 +86,10 @@
       </nav>
 
       <!-- Main content area -->
-      <div class="flex-grow-1 d-flex flex-row overflow-hidden">
+      <div class="flex-grow-1 d-flex flex-column flex-sm-row overflow-hidden">
 
         <!-- Left side with scroller and bottom navbar -->
-        <div class="flex-grow-1 d-flex flex-column">
+        <div id="text-container" class="flex-grow-1 d-flex flex-column">
             <!-- Scroller container -->
             <div id="book-page-scroller" class="flex-grow-1 overflow-auto">
                 <div id="words-container"
@@ -148,7 +148,7 @@
         </div>  <!-- End of Left side -->
 
         <!-- Right side with collapsable Sidebar -->
-        <div id="lexical-panel" class="collapse d-md-block col-md-6 col-lg-4 order-1 order-md-2 h-md-100">
+        <div id="lexical-panel" class="collapse d-sm-block order-2">
             <div class="card h-100 d-flex flex-column">
                 <div class="card-header">
                     <ul class="nav nav-tabs card-header-tabs" id="lexicalPanelTabs" role="tablist">
