shoter button caption

--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -184,7 +184,7 @@
                 </div>
                 <div id="sidebarFooter" class="card-footer">
                   <a href="{% url 'language-preferences' %}" id="sidebar-settings-button" class="btn btn-light w-100">
-                    <i class="bi bi-gear-fill me-2"></i>Dictionary & AI Insights Settings
+                    <i class="bi bi-gear-fill me-2"></i>Dictionary & AI
                   </a>
                 </div>
             </div>
