--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -151,10 +151,10 @@
         <div id="lexical-panel" class="collapse d-sm-block order-2">
             <div class="card h-100 d-flex flex-column">
                 <div class="card-header">
-                    <ul class="nav nav-tabs card-header-tabs" id="lexicalPanelTabs" role="tablist">
+                    <ul class="nav nav-tabs card-header-tabs flex-nowrap flex-md-wrap" id="lexicalPanelTabs" role="tablist">
                         {% for article in lexical_articles %}
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link {% if forloop.first %}active{% endif %}"
+                        <li class="nav-item text-nowrap" role="presentation">
+                            <button class="nav-link text-nowrap {% if forloop.first %}active{% endif %}"
                                     id="lexical-tab-{{ forloop.counter }}"
                                     data-bs-toggle="tab"
                                     data-bs-target="#lexical-article-{{ forloop.counter }}"
